--- a/client-side/package.json
+++ b/client-side/package.json
@@ -14,7 +14,9 @@
     "antd": "^5.15.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
     "mdb-react-ui-kit": "^7.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
